# Gestore-CSV

./: CMakeLists.txt  CMakeLists.txt.user.980ba23  CMakeLists.txt.user.bc3a41b  README.md  corsi_studenti.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
